Added User Location

--- a/'Za Hunter/Base.lproj/Main.storyboard
+++ b/'Za Hunter/Base.lproj/Main.storyboard
@@ -28,6 +28,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="mapView" destination="mgX-qr-hbs" id="Lec-Fe-3FM"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
